--- a/vercel.json
+++ b/vercel.json
@@ -71,7 +71,7 @@
         },
         {
           "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
+          "value": "DENY"
         },
         {
           "key": "X-XSS-Protection",
@@ -83,15 +83,11 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://vercel.live https://vercel.live/_next-live/; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://*.homeswift.co https://*.vercel.app https://tproaiqvkohrlxjmkgxt.supabase.co https://*.supabase.co wss://*.supabase.co https://vercel.live; frame-src 'self' https://*.supabase.co https://vercel.live; worker-src 'self' blob:;"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://vercel.live https://vercel.live/_next-live/ https://homeswift.co; script-src-elem 'self' 'unsafe-inline' https://homeswift.co https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co; style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com https://homeswift.co; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://*.supabase.co https://homeswift.co https://homeswift-ai.vercel.app; frame-src 'self' https://vercel.live;"
         },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://homeswift.co https://chat.homeswift.co"
+          "value": "https://homeswift.co, https://chat.homeswift.co"
         },
         {
           "key": "Access-Control-Allow-Methods",
